syntax = "proto3";

package umbra.handshake;

// Handshake initiation message
message HandshakeInit {
  bytes peer_id = 1;
  bytes x25519_pk = 2;    // 32 bytes
  bytes pq_pk = 3;        // Optional: ML-KEM-768 public key (~1184 bytes)
  bytes signature = 4;    // 64 bytes Ed25519
  bytes verify_key = 5;   // 32 bytes Ed25519 public key (for message signatures)
}

// Handshake response message
message HandshakeResp {
  bytes peer_id = 1;
  bytes x25519_pk = 2;    // 32 bytes
  bytes pq_ct = 3;        // Optional: ML-KEM-768 ciphertext (~1088 bytes)
  bytes signature = 4;    // 64 bytes Ed25519
  bytes verify_key = 5;   // 32 bytes Ed25519 public key (for message signatures)
}

// Complete handshake message (wrapper)
message HandshakeMessage {
  oneof message {
    HandshakeInit init = 1;
    HandshakeResp resp = 2;
  }
}
